# brochat

./: .gitignore  CaddyFile  README.md
UI/frontend/: debug.keystore  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
UI/frontend/src/: App.vue  main.ts
UI/frontend/src-tauri/: tauri.conf.json
UI/frontend/src/api/: auth.ts
UI/frontend/src/assets/: main.css
UI/frontend/src/composables/: ws.ts
UI/frontend/src/router/: index.ts
UI/frontend/src/views/: Chat.vue  Login.vue  Register.vue
backend/: Cargo.toml
backend/.sqlx/: query-dd867c2d657dce864a0ae0b2dfad8f8b7d43c1353839d4c2c78b5bd1a7c10a61.json
backend/migrations/: 20250502140530_init.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  utils.rs  ws.rs
