[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = {version = "0.8.3", features = ["ws", "multipart"]}
chrono = {version = "0.4.40", features = ["serde"]}
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rand = "0.8.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.140"
sqlx = {version = "0.8.3", features= ["postgres", "uuid", "runtime-tokio", "chrono"]}
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
